--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="viewport"
       content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=0"
     />
-    <title>admin</title>
+    <title><%= VITE_GLOB_APP_TITLE %></title>
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   </head>
   <body>
@@ -138,6 +138,15 @@
           }
         }
       </style>
+      <div class="app-loading">
+        <div class="app-loading-wrap">
+          <img src="/logo.png" class="app-loading-logo" alt="Logo" />
+          <div class="app-loading-dots">
+            <span class="dot dot-spin"><i></i><i></i><i></i><i></i></span>
+          </div>
+          <div class="app-loading-title"><%= VITE_GLOB_APP_TITLE %></div>
+        </div>
+      </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
